--- a/movies/src/main/resources/application.properties
+++ b/movies/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.database=${MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}
